--- a/islandCentre.html
+++ b/islandCentre.html
@@ -43,7 +43,7 @@
     <div class="islandBox">
       <p>Owner: Ky-An Tran</p>
       <p>Title: Throneland</p>
-      <img src="islands/Ky-An's_Island/preview.png" width=60% height=auto>
+      <img style="border-radius: 12px;"  src="islands/Ky-An's_Island/preview.png" width=60% height=auto>
       <br>
       <a href="islands/Ky-An's_Island/index.html"><button class="islandButton">View Island</button></a>
     </div>
