--- a/islandCentre.html
+++ b/islandCentre.html
@@ -47,6 +47,14 @@
       <br>
       <a href="islands/Ky-An's_Island/index.html"><button class="islandButton">View Island</button></a>
     </div>
+  <div class="islandView" style="overflow: auto; padding-left: 20px; padding-right: 20px; padding-top: 20px; padding-bottom: 20px;">
+    <div class="islandBox">
+      <p>Owner: Kiefer Yuen</p>
+      <p>Title: Featherland</p>
+      <img style="border-radius: 12px;"  src="islands/Featherland/preview.png" width=60% height=auto>
+      <br>
+      <a href="islands/Featherland/index.html"><button class="islandButton">View Island</button></a>
+    </div>  
 
   </div>
 
